--- a/lenguaje/index.html
+++ b/lenguaje/index.html
@@ -99,16 +99,35 @@ fn sum(a: u32, b: u32) -> u32 pure {
     </div>
   </section>
 
-  <section>
+  <!-- Casos de uso mejorados -->
+  <section class="usecases">
     <div class="container">
       <h2 class="section-title">Casos de uso</h2>
       <div class="grid">
-        <div class="card"><strong>Cripto & Exchanges</strong><br/>Activos tipados y permisos evitan duplicaciones y fugas.</div>
-        <div class="card"><strong>SaaS regulado</strong><br/>Efectos controlados + SBOM → cumplimiento más fácil.</div>
-        <div class="card"><strong>Plugins seguros (Wasm)</strong><br/>Sandbox fuerte: aísla fallos y protege el host.</div>
-        <div class="card"><strong>Industrial/IoT</strong><br/>Sin UAF/overflow y binarios pequeños auditables.</div>
-        <div class="card"><strong>Finanzas</strong><br/>Invariantes verificables: límites y saldos garantizados.</div>
-        <div class="card"><strong>Blockchain</strong><br/>Plantillas seguras contra reentrancy y errores de permisos.</div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 3L19 12 5 21 5 3z"/></svg>
+          <div><strong>Cripto & Exchanges</strong><br/>Activos tipados y permisos evitan duplicaciones y fugas.</div>
+        </div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 6l3 1v12H3V6zm5 0l3 1v12H8V6zm5 0l3 1v12h-3V6zm5 0l3 1v12h-3V6z"/></svg>
+          <div><strong>SaaS regulado</strong><br/>Efectos controlados + SBOM → cumplimiento más fácil.</div>
+        </div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5 3.58 9.74 9 11 5.42-1.26 9-6 9-11V5l-9-4z"/></svg>
+          <div><strong>Plugins seguros (Wasm)</strong><br/>Sandbox fuerte: aísla fallos y protege el host.</div>
+        </div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2h10l5 5v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7l5-5z"/></svg>
+          <div><strong>Industrial/IoT</strong><br/>Sin UAF/overflow y binarios pequeños auditables.</div>
+        </div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 3h20v18H2V3zm4 2v14h12V5H6z"/></svg>
+          <div><strong>Finanzas</strong><br/>Invariantes verificables: límites y saldos garantizados.</div>
+        </div>
+        <div class="card">
+          <svg class="usecases-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 3h20v18H2V3zm4 2v14h12V5H6z"/></svg>
+          <div><strong>Blockchain</strong><br/>Plantillas seguras contra reentrancy y errores de permisos.</div>
+        </div>
       </div>
     </div>
   </section>
