--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" loading="lazy" />
       <div class="intro">
         <h1>Daniel Moreno Fernández</h1>
-        <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
+        <p class="lead">Apasionado de la programación y la ciberseguridad • Alias <strong>xk0dex</strong></p>
         <nav aria-label="Menú principal">
           <a href="#about">Sobre mí</a>
           <a href="auditorias.html">Auditorías</a>
