--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="container">
     <section id="about" class="card" aria-labelledby="about-title">
       <h2 id="about-title">Sobre mí</h2>
-      <p>Soy <strong>Daniel</strong>, estudiante de <em>hacking ético</em> con el objetivo de convertirme en <strong>pentester profesional</strong>. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
+      <p>Soy <strong>Daniel</strong>, estudiante de <em>programación y hacking ético</em> con el objetivo de convertirme en <strong>programador y pentester profesional</strong>. Disfruto escribiendo código y explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
     </section>
 
     <section id="training" class="card" aria-labelledby="training-title">
