--- a/code/index.html
+++ b/code/index.html
@@ -92,7 +92,7 @@
       <section class="screen">
         <div class="banner">
           <div class="row dim">Inicializando entorno… OK</div>
-          <div class="row logo">ConsolePort · <span class="typing">interfaz de portafolio en terminal</span></div>
+          <div class="row logo">Termianl · <span class="typing">interfaz de portafolio en terminal</span></div>
         </div>
 
         <div id="output" class="output" role="log" aria-live="polite" aria-relevant="additions text"></div>
@@ -118,20 +118,8 @@
         name: 'ConsoleJuegos',
         desc: 'Aventura de texto retro en navegador con React + TS + Tailwind.',
         tags: ['react','typescript','tailwind','game'],
-        url: 'https://xk0dex.github.io/consolejuegos/' // <-- ajusta si es otra URL
+        url: 'https://xk0dex.github.io/code/consolegame.html/' // <-- ajusta si es otra URL
       },
-      {
-        name: 'CLI Toolkit',
-        desc: 'Colección de utilidades CLI en Node/TS para automatizar tareas.',
-        tags: ['node','cli','automation'],
-        url: 'https://github.com/xk0dex/cli-toolkit'
-      },
-      {
-        name: 'Retro UI Pack',
-        desc: 'Componentes UI con estética CRT y efectos scanline.',
-        tags: ['ui','design','css'],
-        url: 'https://github.com/xk0dex/retro-ui-pack'
-      }
     ];
 
     // ===== Estado de la consola =====
