--- a/code/index.html
+++ b/code/index.html
@@ -118,7 +118,7 @@
         name: 'ConsoleJuegos',
         desc: 'Aventura de texto retro en navegador con React + TS + Tailwind.',
         tags: ['react','typescript','tailwind','game'],
-        url: 'https://xk0dex.github.io/code/consolegame.html/' // <-- ajusta si es otra URL
+        url: 'https://xk0dex.github.io/code/gameconsole.html/' // <-- ajusta si es otra URL
       },
     ];
 
