--- a/code/index.html
+++ b/code/index.html
@@ -118,13 +118,13 @@
         name: 'ConsoleJuegos',
         desc: 'Aventura de texto retro en navegador con React + TS + Tailwind.',
         tags: ['react','typescript','tailwind','game'],
-        url: 'https://xk0dex.github.io/code/gameconsole.html/'
+        url: 'https://xk0dex.github.io/code/gameconsole.html'
       },
       {
         name: 'Conversor',
         desc: 'Conversor de datos retro: transforma JSON, CSV y tablas Markdown de forma rápida y 100% offline en tu navegador.',
         tags: ['react','typescript','tailwind','game'],
-        url: 'https://xk0dex.github.io/code/conversor.html/'
+        url: 'https://xk0dex.github.io/code/conversor.html'
       },
     ];
 
