Improve portfolio: fix branding consistency, add technical skills section, enhance SEO and CTA buttons
- Unified brand to use 'xk0dex' consistently across all pages
- Fixed relative paths in auditorias.html
- Added comprehensive technical skills section with Penetration Testing, Programming, and Systems categories
- Enhanced SEO with Open Graph and Twitter Card meta tags
- Added prominent call-to-action buttons for hire/CV download
- Improved performance with font optimization and image preloading

--- a/auditorias.html
+++ b/auditorias.html
@@ -7,7 +7,7 @@
   <title>Auditorías | h4cksito</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -17,8 +17,8 @@
       <h1>Auditorías realizadas</h1>
       <p class="lead">Colaboraciones éticas en ciberseguridad</p>
       <nav>
-        <a href="../index.html">Inicio</a>
-        <a href="../#contact">Contacto</a>
+        <a href="index.html">Inicio</a>
+        <a href="#contact">Contacto</a>
       </nav>
     </div>
   </header>
@@ -28,7 +28,7 @@
       <h3>Stamina Marketing</h3>
       <p>📅 Fecha de realización: <strong>28 julio 2025</strong></p>
       <a href="https://docs.google.com/document/d/1ECcpp52y8aidzBRyKOa80HioYc4O_Mz6nuKYVpJOFls/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
-      <img src="https://h4cksito.github.io/logos/Logotipo_STAMINA_turquesa.svg" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
+      <img src="logos/Logotipo_STAMINA_turquesa.svg" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
       </a>
     </section>
   </main>
