--- a/write.html
+++ b/write.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Writeups de CTF de Daniel Moreno Fernández (h4cksito)." />
-  <title>Writeups | h4cksito</title>
+  <meta name="description" content="Writeups de CTF de Daniel Moreno Fernández (xk0dex)." />
+  <title>Writeups | xk0dex</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
