Add algorithm visualizer entry to index.html

--- a/code/index.html
+++ b/code/index.html
@@ -126,6 +126,12 @@
         tags: ['react','typescript','tailwind','game'],
         url: 'https://xk0dex.github.io/code/conversor.html'
       },
+      {
+        name: 'Algoritmo',
+        desc: 'Visualizador de algoritmo..',
+        tags: ['react','typescript','tailwind','algoritmo'],
+        url: 'https://github.com/xk0dex/algorithm-visualizer/blob/main/index.html'
+      },
     ];
 
     // ===== Estado de la consola =====
