Update URL for algorithm visualizer project

--- a/code/index.html
+++ b/code/index.html
@@ -130,7 +130,7 @@
         name: 'Algoritmo',
         desc: 'Visualizador de algoritmo..',
         tags: ['react','typescript','tailwind','algoritmo'],
-        url: 'https://github.com/xk0dex/algorithm-visualizer/blob/main/index.html'
+        url: 'https://github.com/xk0dex/algorithm-visualizer'
       },
     ];
 
