--- a/code/index.html
+++ b/code/index.html
@@ -92,7 +92,7 @@
       <section class="screen">
         <div class="banner">
           <div class="row dim">Inicializando entorno… OK</div>
-          <div class="row logo">Termianl · <span class="typing">interfaz de portafolio en terminal</span></div>
+          <div class="row logo">Terminal · <span class="typing">interfaz de portafolio en terminal</span></div>
         </div>
 
         <div id="output" class="output" role="log" aria-live="polite" aria-relevant="additions text"></div>
