--- a/code/index.html
+++ b/code/index.html
@@ -128,9 +128,15 @@
       },
       {
         name: 'Algoritmo',
-        desc: 'Visualizador de algoritmo..',
+        desc: 'Visualizador de algoritmo.',
         tags: ['react','typescript','tailwind','algoritmo'],
         url: 'https://github.com/xk0dex/algorithm-visualizer'
+      },
+      {
+        name: 'empathy',
+        desc: 'Empathy',
+        tags: ['react','typescript','tailwind','algoritmo'],
+        url: 'https://github.com/xk0dex/empathy'
       },
     ];
 
